# quick_runner_rs

./: Cargo.toml  LICENSE  config.json
Config/: virtual_keys_codes.json
src/: main.rs
