[package]
name = "quick_runner_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.18", features = ["derive"] }
crossterm = "0.28.1"
windows = {version = "0.58.0", features = ["Win32","Win32_System","Win32_System_IO","Win32_UI","Win32_UI_WindowsAndMessaging"]}
winapi = { version = "0.3", features = ["winuser","winerror","errhandlingapi"] }
ctrlc = "3.1.7"
crossbeam-channel = "0.5"
once_cell = "1.17"
lazy_static = "1.4"

